--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -5,5 +5,5 @@ html(lang="ja")
     link(rel="stylesheet" href="css/main.css")
   body
     h1 IMAGO
-    canvas#webgl-contents
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r73/three.min.js")
     script(src="js/main.js")
