--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -1,4 +1,4 @@
-- var website_name = "IAMGO"
+- var website_name = "IMAGO"
 - var meta_description = "「想像すること」とは何だろうか？これが、本作のテーマであり、モチーフである。"
 
 doctype html
