--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,32 +1,19 @@
 @charset "UTF-8";
-@import url(https://fonts.googleapis.com/css?family=IM+Fell+Great+Primer+SC);
-@import "_normalize";
 
-html {
-  height: 100%;
-  color: #fff;
-  background-color: #000;
-}
-body {
-  height: 100%;
-  margin: 0;
-}
-h1 {
-  position: absolute;
-  right: 0;
-  bottom: 30px;
-  left: 0;
-  margin: 0;
-  font-family: 'IM Fell Great Primer SC', serif;
-  font-size: 40px;
-  text-align: center;
-  letter-spacing: 8px;
-}
-canvas {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: -1;
-}
+@import url(https://fonts.googleapis.com/css?family=IM+Fell+Great+Primer+SC);
+
+// ==========================================================================
+// Foundation
+// ==========================================================================
+@import "./foundation/_normalize";
+@import "./foundation/_global";
+
+// ==========================================================================
+// Layout
+// ==========================================================================
+
+// ==========================================================================
+// Object
+// ==========================================================================
+// Component
+@import "./object/component/_introduction";
