--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -29,6 +29,19 @@ html(lang="ja")
     meta(name="twitter:image", content="")
 
   body
-    h1 IMAGO
+    .c-introduction
+      .c-introduction__wrap
+        h1.c-introduction__header
+          span.c-introduction__text.c-introduction__text--01 I
+          span.c-introduction__text.c-introduction__text--02 M
+          span.c-introduction__text.c-introduction__text--03 A
+          span.c-introduction__text.c-introduction__text--04 G
+          span.c-introduction__text.c-introduction__text--05 O
+        .c-introduction__loading
+      .c-introduction__bg.c-introduction__bg--01
+      .c-introduction__bg.c-introduction__bg--02
+      .c-introduction__bg.c-introduction__bg--03
+      .c-introduction__bg.c-introduction__bg--04
     script(src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r73/three.min.js")
+    script(src="//code.jquery.com/jquery-2.2.0.min.js")
     script(src="js/main.js")
