--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -17,3 +17,4 @@
 // ==========================================================================
 // Component
 @import "./object/component/_introduction";
+@import "./object/component/_summary";
