--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -42,6 +42,13 @@ html(lang="ja")
       .c-introduction__bg.c-introduction__bg--02
       .c-introduction__bg.c-introduction__bg--03
       .c-introduction__bg.c-introduction__bg--04
+    .c-summary
+      h1.c-summary__header
+        |IMAGO
+      p.c-summary__paragraph
+        |[→] and [j] : view next image.
+        br
+        |[←] and [k] : view preview image. 
     script(src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r73/three.min.js")
     script(src="//code.jquery.com/jquery-2.2.0.min.js")
     script(src="js/main.js")
