--- a/src/css/object/component/_summary.scss
+++ b/src/css/object/component/_summary.scss
@@ -1,14 +1,15 @@
 .c-summary {
   position: absolute;
-  left: 20px;
-  bottom: 20px;
+  left: 30px;
+  bottom: 25px;
   &__header {
-    margin: 0 0 10px;
+    margin: 0 0 5px;
     font-size: 42px;
     letter-spacing: 10px;
   }
   &__paragraph {
     line-height: 1.5;
+    margin: 0;
     letter-spacing: 2px;
   }
 }
