--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -18,3 +18,4 @@
 // Component
 @import "./object/component/_introduction";
 @import "./object/component/_summary";
+@import "./object/component/_pager";
