--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -49,6 +49,10 @@ html(lang="ja")
         |[→] and [j] : view next image.
         br
         |[←] and [k] : view preview image. 
+    .c-pager
+      span.c-pager__current 0
+      |/
+      span.c-pager__all 0
     script(src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r73/three.min.js")
     script(src="//code.jquery.com/jquery-2.2.0.min.js")
     script(src="js/main.js")
