[add] module introduction. and other key event.

--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -49,6 +49,8 @@ html(lang="ja")
         |[→] and [j] : view next image.
         br
         |[←] and [k] : view preview image. 
+        br
+        |[esc] : go back to panorama.
     .c-pager
       span.c-pager__current 0
       |/
