--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -37,7 +37,8 @@ html(lang="ja")
           span.c-introduction__text.c-introduction__text--03 A
           span.c-introduction__text.c-introduction__text--04 G
           span.c-introduction__text.c-introduction__text--05 O
-        .c-introduction__loading
+        .c-introduction__loader
+          img(src="img/common/preloader.png", width="50", height="50" alt="")
       .c-introduction__bg.c-introduction__bg--01
       .c-introduction__bg.c-introduction__bg--02
       .c-introduction__bg.c-introduction__bg--03
