--- a/src/css/object/component/_introduction.scss
+++ b/src/css/object/component/_introduction.scss
@@ -35,9 +35,19 @@
       transform: translateY(-0.1em) rotate3d(1, 0, 0, -80deg);
     }
   }
-  &__loading {
+  &__loader {
     width: 50px;
     height: 50px;
+    opacity: 0;
+    margin: 20px auto 0;
+    animation-name: preloader;
+    animation-duration: 0.4s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    transition: 1.5s;
+    &.is-viewed {
+      opacity: 1;
+    }
   }
   &__bg {
     position: absolute;
@@ -50,5 +60,13 @@
     &.is-transparent {
       opacity: 0;
     }
+  }
+}
+@keyframes preloader {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
