[add] information btn.

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -18,4 +18,6 @@
 // Component
 @import "./object/component/_introduction";
 @import "./object/component/_summary";
+@import "./object/component/_information-btn";
+@import "./object/component/_information";
 @import "./object/component/_pager";
