--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -52,6 +52,11 @@ html(lang="ja")
         |[←] and [k] : view preview image. 
         br
         |[esc] : go back to panorama.
+    .c-information-btn
+      .c-information-btn__wrap
+        |?
+    .c-information
+      
     .c-pager
       span.c-pager__current 0
       |/
