--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -46,6 +46,8 @@ html(lang="ja")
     .c-summary
       h1.c-summary__header
         |IMAGO
+      h2.c-summary__sub-header
+        |hiroshi yoshida
       p.c-summary__paragraph
         |[→] and [j] : view next image.
         br
@@ -56,7 +58,49 @@ html(lang="ja")
       .c-information-btn__wrap
         |?
     .c-information
-      
+      .c-information__wrap
+        h2.c-information__header
+          |IMAGO
+        h3.c-information__sub-header
+          |hiroshi yoshida
+        .c-information__summary
+          p
+            |発効日：2015年9月6日
+            br
+            |サイズ：300ｍｍ×300ｍｍ
+            br
+            |頁数：218
+            br
+            |図版：モノクロ
+          p
+            a(href="https://yoshidahiroshi.stores.jp/", target="_blank")
+              |shopページにて販売しています。
+        .c-information__about
+          h3.c-information__about-header
+            |作品について。
+          p これは「想像すること」をテーマとして描かれた作品だ。私自身の内面世界をモチーフとして、「想像する」という運動そのものに焦点を当てた作品を作ろうと試みた。しかし、「想像する」とは一体何だろうか？あまりに広い範囲を扱うこの言葉に対してひとまず私はそれを、ある「主観的に触れている環境」に「物語」を作ることだと解釈した。
+          p 私は京都に生まれ育ち、大学進学を機に石川県へと移り住み、卒業後は茨城県取手市へ移った。そして震災をきっかけに2012年４月に京都にある生まれ育った家へ帰ることになり、それから2015年２月までのおよそ３年間をその場所で過ごした。この作品のほぼ全てはこの3年の間に作られた。
+          p 山に囲まれた狭い空の下にある、小さくも豊かな自然。そして小さな庭のある一軒の家。この環境は私にとって最も多感な少年時代のほとんどを過ごした場所であり、自分自身の想像力の源泉に最も強い影響を与えた環境であった。改めてその環境に置かれる中で、私はある種の退行状態に陥った。それは自分自身の古い記憶や無意識の領域へ深く潜り、自分自身のルーツを探りなおす新たな創造性へ至る物語を紡ぐ過程であった。ここで私が「想像したこと」を一つの作品として作り出した。
+          p 想像することの役割の一つとして、過去や未来といった時間軸を超えて事物を繋ぎあわせ価値を与えなおし、自分自身が位置する認識空間を新たにする力がある。これは物語の想像力が持つ最も基本的で創造的な力の一つであると思っている。
+          p 様々に解釈可能となる象徴的なイメージの力に頼ったとはいえ、これはある一つの特殊な物語でしかなく、しかもごく個人的な物語だ。その上これで完成という類のものではなく、明確な始まりと終わりも存在しない。あまりに遠く広い海を泳いでいる最中、少し深く潜ってはまた息継ぎをしに海上へ泳ぎ出てくるような行為だ。
+          p しかし、これから大きな社会変動が予測される中で、多くの人が私が取り組んだような問題に各々で、そしてあるいは社会全体で取り組まなくてはならなくなるのではないかと考えている。それも一度や二度ではないだろう。それは想像力の最も基本的な働きの一つであり、創造性によって変化を乗り越える為の準備ではないだろうか。
+          p ごく個人的であるがゆえに、ある種の普遍性を持つ物語となって共感される部分がほんのわずかでもあれば幸いと思う。
+          h3.c-information__about-header
+            |About this work
+          p This is the work under the theme of "to imagine". I attempted to create the piece focusing purely on the motion of "to imagine" itself in the motif of the world of my inner self. 'What is it on earth "to imagine" ?', I questioned. With due respect to the word which enormously covers the broad areas, I initially interpreted as this is to create "a story" in "the environment where I am subjectively exposed to".
+          p I was born and raised in Kyoto. I moved to Ishikawa Prefecture due to the entrance to university. After graduated, I moved to Toride, in Ibaraki Prefecture. Then as the quake hit, I found myself going back home to Kyoto in April 2012 and I stayed there for 3 years until February 2015. Almost every piece has been created during those 3 years.
+          p Surronded by mountains underneath the narrow sky, the nature is petit but wealthy. And a house with a tiny garden. This is the place I spent most of my boyhood time at the most sensitive age. This is the place that gave me the greatest impact to the origin of my imagination. As I put myself into the environment again, I fell into some sort of regression. That led me to deeply dive into my old memories and unconcious mind, and it was the process to weave a story to reach to the new creativity by tracing my roots again. This is the place I came up with this creation to express what I "imagined".
+          p One of the roles what "to imagine" fulfills is to exert the value by piecing things and events across space and time, no matter what happened in the past nor what will happen in the future, and to renew the cognitive space where I am standing at. I believe that is one of the most fundamental and creative forces what the story's imagination possesses.
+          p Be that as it may appear to hang my hat on the power of conventional image which can be interpreted in various ways, this is nothing more than a particular story. Furthermore this is a sheer story of my indivisual. And this is not a kind which can be reached to the completion, there is no beginning or ending. This is a deed as if you are swimming in the wide ocean far from anywhere and come out to breathe once after sinking deeply a little while again and again.
+          p However, whilst speculating the oncoming great social changes, I anticipate that many people will have to deal with problems on their own just as I have faced, or so will the entire society. On top of that, it may not be just once or twice. That is one of the most significant functions of imaginative faculty and it can be the preparation to overcome the changes by creativity.
+          p As a consequence of personal content, if you find some sort of universality in the story and have empathy even a faint one, I feel grateful.
+        .c-information__credit
+          p
+            |artist: 
+            a(href="http://www.hiroshi-yoshida.jp/", target="_blank") hiroshi yoshida
+            br
+            |developer: 
+            a(href="http://www.tplh.net/", target="_blank") yoichi kobayashi
     .c-pager
       span.c-pager__current 0
       |/
