--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -7,6 +7,7 @@
 // ==========================================================================
 @import "./foundation/_normalize";
 @import "./foundation/_global";
+@import "./foundation/_variables";
 
 // ==========================================================================
 // Layout
