--- a/src/css/object/component/_introduction.scss
+++ b/src/css/object/component/_introduction.scss
@@ -15,6 +15,7 @@
   }
   &__header {
     margin: 0;
+    padding-left: 16px;
     font-size: 56px;
     letter-spacing: 16px;
     text-align: center;
