--- a/src/css/object/component/_summary.scss
+++ b/src/css/object/component/_summary.scss
@@ -3,14 +3,20 @@
   left: 30px;
   bottom: 25px;
   &__header {
-    margin: 0 0 5px;
+    margin: 0;
     font-size: 42px;
     letter-spacing: 10px;
+  }
+  &__sub-header {
+    margin: 0 0 20px;
+    font-size: 24px;
+    font-weight: 100;
+    letter-spacing: 5px;
   }
   &__paragraph {
     line-height: 1.5;
     margin: 0;
-    font-size: 13px;
+    font-size: 14px;
     letter-spacing: 3px;
   }
 }
