[add] each icons.

--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -13,7 +13,7 @@ html(lang="ja")
     meta(name="theme-color", content="#ffffff")
     
     link(rel="shortcut icon" href="./img/common/icon.ico")
-    link(rel="apple-touch-icon" href="./img/common/app-icon.ico")
+    link(rel="apple-touch-icon" href="./img/common/app-icon.png")
     link(rel="stylesheet" href="./css/main.css")
 
     meta(property="og:title", content="#{website_name}")
