[edit] ogp value.

--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -20,13 +20,13 @@ html(lang="ja")
     meta(property="og:site_name", content="#{website_name}")
     meta(property="og:type", content="website")
     meta(property="og:description", content="#{meta_description}")
-    meta(property="og:url", content="")
-    meta(property="og:image", content="")
+    meta(property="og:url", content="http://www.hiroshi-yoshida.jp/imago/")
+    meta(property="og:image", content="http://www.hiroshi-yoshida.jp/imago/img/common/share.png")
     
     meta(name="twitter:card", content="summary_large_image")
     meta(name="twitter:title", content="#{website_name}")
     meta(name="twitter:description", content="#{meta_description}")
-    meta(name="twitter:image", content="")
+    meta(name="twitter:image", content="http://www.hiroshi-yoshida.jp/imago/img/common/share.png")
 
   body
     .c-introduction
