--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -97,10 +97,10 @@ html(lang="ja")
           p As a consequence of personal content, if you find some sort of universality in the story and have empathy even a faint one, I feel grateful.
         .c-information__share
           .c-information__share-item.c-information__share-item--facebook
-            a(href="http://www.facebook.com/share.php?u=#{path_abs}")
+            a(href="http://www.facebook.com/share.php?u=#{path_abs}", class="popup")
               span.c-information__share-text facebook
           .c-information__share-item.c-information__share-item--twitter
-            a(href="http://twitter.com/share?url=#{path_abs}&amp;text=IMAGO")
+            a(href="http://twitter.com/share?url=#{path_abs}&amp;text=IMAGO", class="popup")
               span.c-information__share-text twitter
         .c-information__credit
           p
