--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -40,6 +40,10 @@ html(lang="ja")
           span.c-introduction__text.c-introduction__text--05 O
         .c-introduction__loader
           img(src="img/common/preloader.png", width="50", height="50" alt="")
+        .c-introduction__counter
+          span.c-introduction__counter-num.c-introduction__counter-num--current 0
+          |/
+          span.c-introduction__counter-num.c-introduction__counter-num--all 0
       .c-introduction__bg.c-introduction__bg--01
       .c-introduction__bg.c-introduction__bg--02
       .c-introduction__bg.c-introduction__bg--03
