--- a/src/css/object/component/_introduction.scss
+++ b/src/css/object/component/_introduction.scss
@@ -35,11 +35,11 @@
       opacity: 0;
       transform: translateY(-0.1em) rotate3d(1, 0, 0, -80deg);
     }
-    &--01 { -webkit-transition-delay: 0; }
-    &--02 { -webkit-transition-delay: 0.2s; }
-    &--03 { -webkit-transition-delay: 0.4s; }
-    &--04 { -webkit-transition-delay: 0.6s; }
-    &--05 { -webkit-transition-delay: 0.8s; }
+    &--01 { transition-delay: 0; }
+    &--02 { transition-delay: 0.2s; }
+    &--03 { transition-delay: 0.4s; }
+    &--04 { transition-delay: 0.6s; }
+    &--05 { transition-delay: 0.8s; }
   }
   &__loader {
     width: 50px;
