[edit] update share image.

--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -22,12 +22,12 @@ html(lang="ja")
     meta(property="og:type", content="website")
     meta(property="og:description", content="#{meta_description}")
     meta(property="og:url", content="#{path_abs}")
-    meta(property="og:image", content="#{path_abs}img/common/share.png")
+    meta(property="og:image", content="#{path_abs}img/common/_share.png")
     
     meta(name="twitter:card", content="summary_large_image")
     meta(name="twitter:title", content="#{website_name}")
     meta(name="twitter:description", content="#{meta_description}")
-    meta(name="twitter:image", content="#{path_abs}img/common/share.png")
+    meta(name="twitter:image", content="#{path_abs}img/common/_share.png")
 
   body
     .c-introduction
