[edit] rewrite about text.

--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -83,6 +83,33 @@ html(lang="ja")
         .c-information__about
           h3.c-information__about-header
             |作品について。
+          p
+            |むかし、庭で緑色の光を見た。
+            br
+            |小さい頃に猫を飼っていた。田舎だったので、外にも自由に出入りできるようにしていたのだけれど、どこかで喧嘩した時に猫エイズをもらってしまったようで、次第に病気は重くなっていった。
+            br
+            |最後の数日、しきりに外へ出たがるようになった。既に満足に歩くこともできないほど弱っていたのだけれど、それでもわずかな力を振り絞って外に出ようとする。猫は、死期を悟ると誰にも見つからない場所へ密かに去ってしまうという。しかし、彼は庭の真ん中にうずくまると、そこで動かなくなった。
+          p
+            |断片的な記憶がある。
+          p
+            |ある夜のことだ。
+            br
+            |暗い庭で、家族が猫を見ている。
+            br
+            |僕はその様子を見に行く。
+            br
+            |猫と僕の目があった。
+            br
+            |猫の目がまっ黄色に光った。そしてその時、身体から緑色の光を発したように見えた。
+            br
+            |視界が歪んで、庭全体が急激に明るくなったように感じた。
+            br
+            |猫の身体は緑色に激しく燃えているように見えた。
+            br
+            |空間がねじ曲がり、庭の真ん中にたしかに大きな緑色の火が燃えていた。
+            br
+            |昼間のように明るくなった夜の庭には真っ白な椿の花が咲いていた。
+          hr
           p これは「想像すること」をテーマとして描かれた作品だ。私自身の内面世界をモチーフとして、「想像する」という運動そのものに焦点を当てた作品を作ろうと試みた。しかし、「想像する」とは一体何だろうか？あまりに広い範囲を扱うこの言葉に対してひとまず私はそれを、ある「主観的に触れている環境」に「物語」を作ることだと解釈した。
           p 私は京都に生まれ育ち、大学進学を機に石川県へと移り住み、卒業後は茨城県取手市へ移った。そして震災をきっかけに2012年４月に京都にある生まれ育った家へ帰ることになり、それから2015年２月までのおよそ３年間をその場所で過ごした。この作品のほぼ全てはこの3年の間に作られた。
           p 山に囲まれた狭い空の下にある、小さくも豊かな自然。そして小さな庭のある一軒の家。この環境は私にとって最も多感な少年時代のほとんどを過ごした場所であり、自分自身の想像力の源泉に最も強い影響を与えた環境であった。改めてその環境に置かれる中で、私はある種の退行状態に陥った。それは自分自身の古い記憶や無意識の領域へ深く潜り、自分自身のルーツを探りなおす新たな創造性へ至る物語を紡ぐ過程であった。ここで私が「想像したこと」を一つの作品として作り出した。
@@ -90,13 +117,39 @@ html(lang="ja")
           p 様々に解釈可能となる象徴的なイメージの力に頼ったとはいえ、これはある一つの特殊な物語でしかなく、しかもごく個人的な物語だ。その上これで完成という類のものではなく、明確な始まりと終わりも存在しない。あまりに遠く広い海を泳いでいる最中、少し深く潜ってはまた息継ぎをしに海上へ泳ぎ出てくるような行為だ。
           p しかし、これから大きな社会変動が予測される中で、多くの人が私が取り組んだような問題に各々で、そしてあるいは社会全体で取り組まなくてはならなくなるのではないかと考えている。それも一度や二度ではないだろう。それは想像力の最も基本的な働きの一つであり、創造性によって変化を乗り越える為の準備ではないだろうか。
           p ごく個人的であるがゆえに、ある種の普遍性を持つ物語となって共感される部分がほんのわずかでもあれば幸いと思う。
+
           h3.c-information__about-header
             |About this work
-          p This is the work under the theme of "to imagine". I attempted to create the piece focusing purely on the motion of "to imagine" itself in the motif of the world of my inner self. 'What is it on earth "to imagine" ?', I questioned. With due respect to the word which enormously covers the broad areas, I initially interpreted as this is to create "a story" in "the environment where I am subjectively exposed to".
-          p I was born and raised in Kyoto. I moved to Ishikawa Prefecture due to the entrance to university. After graduated, I moved to Toride, in Ibaraki Prefecture. Then as the quake hit, I found myself going back home to Kyoto in April 2012 and I stayed there for 3 years until February 2015. Almost every piece has been created during those 3 years.
+          p
+            |A long time ago, I saw a green light in the garden.
+            |When I was small, I had a cat. Living in the countryside, we allowed him to come and go freely. But the cat had a fight somewhere and got infected with FIV, the symptom was gradually getting worse.
+            |For the last few days, he was eager to go outside. He was too weak to walk straight by then, however he tried with all the strength to go outside. They say that a cat would secretly leave for a place where nobody can find when it realizes the end of its life. However, he crouched in the middle of the garden and there he became immobile.
+          p
+            |I have fragmentary memories.
+          p
+            |It was one night.
+            br
+            |In a dark garden, my family was watching the cat.
+            br
+            |I went to see what they were up to.
+            br
+            |The cat’s eyes met mine.
+            br
+            |His eyes flashed in bright yellow. And that time it seemed that the green light was radiated from his body.
+            br
+            |I felt that my vision was distorted and the whole garden suddenly became bright.
+            br
+            |His body looked as if burning fiercely in green.
+            br
+            |The space was distorted and certainly the big green blaze was burning in the middle of the garden. 
+            br
+            |In the night garden being as bright as daytime, there was pure white camellia blooming.
+          hr
+          p This is the work under the theme of "to imagine". I attempted to create the piece focusing purely on the motion of "to imagine" itself in the motif of the world of my inner self. 'What is it on earth "to imagine" ?', I questioned. With due respect to the word which enormously covers the broad areas, I initially interpreted  as this is to create "a story" in "the environment where I am subjectively exposed to".
+          p I was born and raised in Kyoto. I moved to Ishikawa Prefecture due to the entrance to university. After graduated, I moved to Toride, in Ibaraki Prefecture. Then as the quake hit, I found myself going back home to Kyoto in April  2012 and I stayed there for 3 years until February 2015. Almost every piece has been created during those 3 years.
           p Surronded by mountains underneath the narrow sky, the nature is petit but wealthy. And a house with a tiny garden. This is the place I spent most of my boyhood time at the most sensitive age. This is the place that gave me the greatest impact to the origin of my imagination. As I put myself into the environment again, I fell into some sort of regression. That led me to deeply dive into my old memories and unconcious mind, and it was the process to weave a story to reach to the new creativity by tracing my roots again. This is the place I came up with this creation to express what I "imagined".
-          p One of the roles what "to imagine" fulfills is to exert the value by piecing things and events across space and time, no matter what happened in the past nor what will happen in the future, and to renew the cognitive space where I am standing at. I believe that is one of the most fundamental and creative forces what the story's imagination possesses.
-          p Be that as it may appear to hang my hat on the power of conventional image which can be interpreted in various ways, this is nothing more than a particular story. Furthermore this is a sheer story of my indivisual. And this is not a kind which can be reached to the completion, there is no beginning or ending. This is a deed as if you are swimming in the wide ocean far from anywhere and come out to breathe once after sinking deeply a little while again and again.
+          p One of the roles what "to imagine" fulfills is to exert the value by piecing things and events across space and time, no matter what happened in the past nor what will happen in the future, and to renew the cognitive space where I am standing at. I believe that is one of the most fundamental and creative forces what the story's imagination possesses.  
+          p Be that as it may appear to hang my hat on the power of conventional image which can be interpreted in various ways, this is nothing more than a particular story. Furthermore this is  a sheer story of my indivisual. And this is not a kind which can be reached to the completion, there is no beginning or ending. This is a deed as if you are swimming in the wide ocean far from anywhere and come out to breathe once after sinking deeply a little while again and again. 
           p However, whilst speculating the oncoming great social changes, I anticipate that many people will have to deal with problems on their own just as I have faced, or so will the entire society. On top of that, it may not be just once or twice. That is one of the most significant functions of imaginative faculty and it can be the preparation to overcome the changes by creativity.
           p As a consequence of personal content, if you find some sort of universality in the story and have empathy even a faint one, I feel grateful.
         .c-information__share
